<resources>
    <string name="app_name">O2Vidz</string>
    <string name="action_settings">Settings</string>
    <!--footer-->
    <string name="home">Home</string>
    <string name="Mp4_Movies">Mp4 Movies</string>
    <string name="gp3_Movies">3gp Movies</string>
    <string name="Tv_Shows">Tv Shows</string>
    <string name="Top_downloads">Top Downloads</string>

    <!--GridView-->
    <string name="view_more">View More</string>
    <string name="English_show">English Tv Show</string>
    <string name="latest_addition">Latest Additions</string>
    <string name="bollywood">Bollywood</string>
    <string name="hollywood">Hollywood</string>
    <string name="hindi_dubbed">Hindi Dubbed</string>
    <string name="wrestling">Wrestling</string>
    <string name="others">Others</string>
    <string name="alpha">A-Z</string>
    <string name="latest_show">Latest Tv Shows</string>
    <string name="download_mp4">Top Mp4 Movies</string>
    <string name="download_gp3">Top 3gp Movies</string>
    <string name="download_show">Top TvShow</string>
    <string name="first">First</string>
    <string name="last">last</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <string name="dialog_msg">Please wait</string>
    <string name="dialog_title">Loading...</string>
    <string name="connection_toast">please Check Your Internet Connection</string>
    <string name="connection_fail">Error in loading data</string>
    <string name="data_error">Error in loading...</string>
    <string name="wifi_connected">Wi-fi is connected</string>
    <string name="lost_connection">Wi-fi is not available</string>

    <!-- navigation Drawer -->
    <string-array name="nav_drawer_items">
        <item>My Downloads</item>
        <item>My Favorite</item>
        <item>Refresh</item>
        <item>Settings</item>
        <item>Feedback</item>
        <item>Invite Friends</item>
        <item>Facebook Link</item>
        <item>Software Update</item>
        <item>About</item>
        <item>Exit</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/down</item>
        <item>@drawable/down</item>
        <item>@drawable/down</item>
        <item>@drawable/down</item>
        <item>@drawable/down</item>
        <item>@drawable/down</item>
        <item>@drawable/down</item>
        <item>@drawable/down</item>
        <item>@drawable/down</item>
        <item>@drawable/down</item>
    </array>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- movie detail-->
    <string name="category">Category : </string>
    <string name="length">Length : </string>
    <string name="noOfParts">No. of Parts : </string>
    <string name="download">Downloads : </string>
    <string name="des">Description</string>
    <string name="dwnl">Download</string>
    <string name="downloads">Downloads</string>

    <string name="feedback_msg">type your feedback here...</string>
    <string name="feedback_subject">type subject..</string>
    <string name="feedback_email">Jhondoe@gmail.com</string>
    <string name="feedback">Feedback</string>
    <string name="email">Email Address</string>
    <string name="subject">Subject</string>
    <string name="msg">Message</string>
    <string name="send">Send</string>

    <!-- settings-->
    <string name="push">Push</string>
    <string name="push_detail">Turn On/Off switch to receive notification about latest updated news from us</string>
    <string name="download_setting">Download Path</string>
    <string name="download_detail">Change default download path here</string>
    <string name="task">Active Download Tasks</string>
    <string name="tasd_detail">Specify how many active downloads you want to run simultaneously(max 4)</string>
    <string name="reume">Auto Resume Downloads</string>
    <string name="resume_detail">Turn on/off automatic resume of download, wherever network resume</string>
    <string name="wifi">Download On Wi-Fi Only</string>
    <string name="wifi_detail">Turn to download only on wi-fi(save mobile data)</string>
    <string name="cache">Clear Cache</string>
    <string name="cahe_detail">It will clear all the stored cache of the app(excluding download media files)</string>
    <string name="update">Auto Update</string>
    <string name="update_detail">Turn on to perform automatic update of the app,wherever a new update is available</string>
    <string name="connection_error">Check your connection and try again</string>
    <string name="retry">Retry</string>
    <string name="no_conctn">No Internet Connection</string>

    <string name="copywrite">\u00a9 2010-2016 O2Vidz</string>
    <string name="version">Version: 1.23</string>
    <string name="url">www.o2vidz.com</string>
    <string name="right">All Right Reserved</string>

    <string name="cast">Cast :</string>
    <string name="genre">Genre :</string>
    <string name="runtime">Runtime :</string>
    <string name="rating">Rating :</string>
    <string name="views">Views :</string>
    <string name="imbd">Imbd :</string>

    <string name="view">Views</string>

    <string name="btnMp4">Download in mp4</string>
    <string name="btngp3">Download in 3gp</string>
    <string name="dwnld_Description">Downloading via O2Vidz..</string>
    
    <string name="msg_select_one_option">Please select one option..</string>
</resources>
