<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_shape"
    tools:context="com.o2cinemas.navigation.About">

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/splash_text" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_logo"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_version"
        android:gravity="center"
        android:text="@string/url"
        android:textColor="@color/white"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/right"
        android:gravity="center"
        android:text="@string/copywrite"
        android:textColor="@color/white"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:id="@+id/right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_ten"
        android:text="@string/right"
        android:textColor="@color/white"
        android:textAppearance="?android:textAppearanceSmall" />
</RelativeLayout>
