<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_frameContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_tvshowCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_tvshowCategory"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_thirty"
            android:paddingLeft="@dimen/padding_ten"
            android:paddingRight="@dimen/padding_ten"
            android:paddingTop="@dimen/padding_ten">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvshow_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Mp4_Movies"
                    android:textAllCaps="true"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/font_normal" />

                <ImageView
                    android:id="@+id/tvshow_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/titl" />

                <TextView
                    android:id="@+id/tvshow_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bollywood"
                    android:textAllCaps="true"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_aplhaSort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white">

            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/first"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="start"
                    android:text="@string/first"
                    android:padding="@dimen/padding_five"
                    android:layout_marginRight="@dimen/padding_five"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:background="@drawable/first_background"
                    android:textSize="@dimen/font_normal" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.6"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <!--<LinearLayout-->
                        <!--android:id="@+id/btnLay"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:orientation="horizontal" >-->
                        <!--</LinearLayout>-->

                        <!--</HorizontalScrollView>-->

                        <LinearLayout
                            android:id="@+id/btnLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>

                </LinearLayout>

                <TextView
                    android:id="@+id/last"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="end"
                    android:padding="@dimen/padding_five"
                    android:layout_marginLeft="@dimen/padding_five"
                    android:text="@string/last"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:background="@drawable/first_background"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>

            <TextView
                android:id="@+id/bolly_Alpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_ten"
                android:paddingTop="@dimen/padding_ten"
                android:text="@string/alpha"
                android:textColor="@color/purple"
                android:textSize="@dimen/font_normal" />

            <GridView
                android:id="@+id/sort_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/grid_sort"
                android:layout_margin="0dp"
                android:background="@drawable/sorting_background"

                android:numColumns="9"
                android:paddingBottom="@dimen/padding_ten"
                android:paddingTop="@dimen/padding_ten"
                android:scrollingCache="true"
                android:smoothScrollbar="true"
                android:scrollbars="none"
                android:verticalSpacing="@dimen/padding_ten"></GridView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>