<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/conctn_available"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <RelativeLayout
                android:id="@+id/tool_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tool_detail">

                    <RelativeLayout
                        android:id="@+id/title_grid"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/movie_grid">

                        <include
                            android:id="@+id/blurr_background"
                            layout="@layout/blurr_image_background" />

                        <!--<include
                            android:id="@+id/tool_detail"
                            layout="@layout/detail_toolbar"></include>-->

                        <LinearLayout
                            android:id="@+id/movie_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/padding_ten"
                            android:layout_marginTop="@dimen/padding_ten"
                            android:layout_marginBottom="@dimen/padding_ten">

                            <TextView
                                android:id="@+id/movie_format"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/font_normal" />

                            <ImageView
                                android:id="@+id/movie_arrow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/padding_three"
                                android:src="@drawable/title_arrow" />

                            <TextView
                                android:id="@+id/movie_category"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/font_normal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/movie_title"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true">

                            <ImageView
                                android:id="@+id/movie_image"
                                android:layout_width="@dimen/movie_image_width"
                                android:layout_height="@dimen/movie_image_height"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/padding_twnty"
                                android:background="@drawable/movie_border"
                                android:scaleType="fitXY" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/movie_title"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center_vertical"
                                android:orientation="vertical"
                                android:paddingLeft="@dimen/padding_twnty">

                                <TextView
                                    android:id="@+id/movie_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingBottom="@dimen/padding_ten"
                                    android:textAllCaps="true"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/font_normal" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:weightSum="1">

                                    <TextView
                                        android:id="@+id/category"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingBottom="@dimen/padding_five"
                                        android:text="@string/category"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/font_small" />

                                    <TextView
                                        android:id="@+id/category_detail"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingBottom="@dimen/padding_five"
                                        android:paddingLeft="@dimen/padding_five"
                                        android:text=""
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/font_small" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    >

                                    <TextView
                                        android:id="@+id/length"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingBottom="@dimen/padding_five"
                                        android:text="@string/length"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/font_small" />

                                    <TextView
                                        android:id="@+id/length_detail"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingBottom="@dimen/padding_five"
                                        android:paddingLeft="@dimen/padding_five"
                                        android:text=""
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/font_small" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/parts"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingBottom="@dimen/padding_five"
                                        android:text="@string/noOfParts"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/font_small" />

                                    <TextView
                                        android:id="@+id/parts_detail"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingLeft="@dimen/padding_five"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/font_small" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                   >

                                    <TextView
                                        android:id="@+id/download"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/download"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/font_small" />

                                    <TextView
                                        android:id="@+id/download_detail"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingLeft="@dimen/padding_five"
                                        android:text=""
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/font_small" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                    </RelativeLayout>


                    <LinearLayout
                        android:id="@+id/desc_grid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_grid"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/padding_ten"
                        android:paddingRight="@dimen/padding_ten">

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/padding_ten"
                            android:text="@string/des"
                            android:textAllCaps="true"
                            android:textColor="@color/purple"
                            android:textSize="@dimen/font_normal" />

                        <LinearLayout
                            android:id="@+id/linearDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/desc_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/description_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:maxLines="2"
                                    android:text=""
                                    android:textColor="@color/grey"
                                    android:textSize="@dimen/font_small" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/viewMore_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:padding="@dimen/padding_ten"
                                android:src="@drawable/down_img" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearDescExpand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/Expanddesc_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/desc_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text=""
                                    android:textColor="@color/grey"
                                    android:textSize="@dimen/font_small" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/viewMore_img"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:padding="@dimen/padding_ten"
                                android:src="@drawable/up_arrow" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dwnld_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desc_grid"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/dwnld_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/padding_ten"
                            android:layout_marginLeft="@dimen/padding_ten"
                            android:text="@string/dwnl"
                            android:textAllCaps="true"
                            android:textColor="@color/purple"
                            android:textSize="@dimen/font_normal" />

                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/download_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/dwnld_list" />

                    <Button
                        android:id="@+id/buttonDownload"
                        android:layout_width="@dimen/button_Width"
                        android:layout_height="@dimen/button_height"
                        android:layout_below="@+id/download_list"
                        android:layout_gravity="left"
                        android:layout_marginBottom="@dimen/padding_twnty"
                        android:layout_marginLeft="@dimen/padding_ten"
                        android:layout_marginTop="@dimen/padding_twnty"
                        android:background="@color/purple"
                        android:drawableLeft="@drawable/tv_down"
                        android:paddingLeft="@dimen/padding_ten"
                        android:text="Download"
                        android:textAlignment="center"
                        android:textAllCaps="true" />
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/connctn_disable"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/conctn_intenet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="No Internet Connection"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_large" />

        <Button
            android:id="@+id/button_discnct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conctn_intenet"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@color/feedback_title"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_large" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loading_layout"
        android:background="@color/white">
    </RelativeLayout>
</RelativeLayout>